Add menzel catalog

--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -43,6 +43,7 @@ catalog.vdb: Catalog van den Bergh
 catalog.pis: Lynga catalog
 catalog.lyn: Pismis catalog
 catalog.mkw: Minkowski catalog
+catalog.mzl: Menzel catalog
 # Lang:
 fr: Francês
 en: Inglês (UK)
