--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -43,6 +43,7 @@ catalog.vdb: Catalogue van den Bergh
 catalog.pis: Catalogue Pismis
 catalog.lyn: Catalogue Lynga
 catalog.mkw: Catalogue Minkowski
+catalog.mzl: Catalogue de Menzel
 # Lang:
 fr: Français
 en: Anglais (UK)
