--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -44,6 +44,8 @@ catalog.pis: Catalogue Pismis
 catalog.lyn: Catalogue Lynga
 catalog.mkw: Catalogue Minkowski
 catalog.mzl: Catalogue de Menzel
+catalog.biu: Catalogue Biurakan
+catalog.boc: Catalogue Bochum
 # Lang:
 fr: Français
 en: Anglais (UK)
