--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -310,3 +310,36 @@ dsoDesc:
 constellationDesc:
 contactDesc:
 skymapDesc:
+# Form add observation
+addObservation: Add an observation
+observation:
+  name:
+    label: Title
+    placeholder: Add a title
+  username:
+    label: Username
+    placeholder: Add your name, alias...
+  description:
+    label: Description
+    placeholder: Describe your observation...
+  observationDate:
+    label: Date
+    placeholder:
+  instrument:
+    label: Instrument
+    placeholder: Precise your intrument
+  diameter:
+    label: Diameter of the mirror
+    placeholder: Enter a number
+  focal:
+    label: Focal length of the telescope
+    placeholder: Enter a number
+  mount:
+    label: Mount
+    placeholder: "Equatorial, azimuthal...(ex.: NEQ-6 Goto)"
+  ocular:
+    label: Occulars
+    placeholder: "Separate with commas (ex: Plossel 21mm, Kellner 10mm...)"
+  locationLabel:
+    label: Location of observation
+    placeholder: "Ex: London, UK"
