--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -142,18 +142,18 @@ constellation.ara: Altar
 constellation.ari: Widder
 constellation.aur: Fuhrmann
 constellation.boo: Bärenhüter
-constellation.cae: Caelum
-constellation.cam: Camelopardalis
-constellation.cap: Capricornus
-constellation.car: Carina
-constellation.cas: Cassiopeia
-constellation.cen: Centaurus
-constellation.cep: Cepheus
-constellation.cet: Cetus
-constellation.cha: Chamaeleon
-constellation.cir: Circinus
-constellation.cma: Canis Majoris
-constellation.cmi: Canis Minor
+constellation.cae: Grabstichel
+constellation.cam: Giraffe
+constellation.cap: Steinbock
+constellation.car: Kiel
+constellation.cas: Kassiopeia
+constellation.cen: Zentaur
+constellation.cep: Kepheus
+constellation.cet: Wal
+constellation.cha: Chamäleon
+constellation.cir: Zirkel
+constellation.cma: Großer Hund
+constellation.cmi: Kleiner Hund
 constellation.col: Columba
 constellation.com: Coma Berenice
 constellation.cnc: Cancer
