--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -142,18 +142,18 @@ constellation.ara: Altar
 constellation.ari: Carnero
 constellation.aur: Cochero
 constellation.boo: Boyero
-constellation.cae: Caelum
-constellation.cam: Camelopardalis
-constellation.cap: Capricornus
-constellation.car: Carina
-constellation.cas: Cassiopeia
+constellation.cae: Cincel
+constellation.cam: Jirafa
+constellation.cap: Capricornio
+constellation.car: Quilla
+constellation.cas: Cassiopea
 constellation.cen: Centaurus
-constellation.cep: Cepheus
-constellation.cet: Cetus
-constellation.cha: Chamaeleon
-constellation.cir: Circinus
-constellation.cma: Canis Majoris
-constellation.cmi: Canis Minor
+constellation.cep: Cefeo
+constellation.cet: Ballena
+constellation.cha: Camaleón
+constellation.cir: Compás
+constellation.cma: Can Mayor
+constellation.cmi: Can Menor
 constellation.col: Columba
 constellation.com: Coma Berenice
 constellation.cnc: Cancer
