--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -142,16 +142,16 @@ constellation.ara: Altar
 constellation.ari: Carneiro
 constellation.aur: Auriga
 constellation.boo: Boieiro
-constellation.cae:
-constellation.cam:
+constellation.cae: Cinzel
+constellation.cam: Camelopardalis
 constellation.cap: Capricórnio
 constellation.car:
 constellation.cas: Cassiopeia
-constellation.cen:
-constellation.cep: COUCOU-TEST
+constellation.cen: Centaurus
+constellation.cep: Cepheus
 constellation.cet: Baleia
 constellation.cha:
-constellation.cir:
+constellation.cir: Compasso
 constellation.cma: Cão Maior
 constellation.cmi:
 constellation.col:
