--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -154,16 +154,16 @@ constellation.cha: Chamäleon
 constellation.cir: Zirkel
 constellation.cma: Großer Hund
 constellation.cmi: Kleiner Hund
-constellation.col: Columba
-constellation.com: Coma Berenice
-constellation.cnc: Cancer
-constellation.cra: Corona Austrina
-constellation.crb: Corona Borealis
-constellation.crt: Crater
-constellation.cru: Crux
-constellation.crv: Corvus
-constellation.cvn: Canes Venatici
-constellation.cyg: Cygnus
+constellation.col: Taube
+constellation.com: Haar der Berenike
+constellation.cnc: Krebs
+constellation.cra: Südliche Krone
+constellation.crb: Nördliche Krone
+constellation.crt: Becher
+constellation.cru: Kreuz des Südensx
+constellation.crv: Rabe
+constellation.cvn: Jagdhunde
+constellation.cyg: Schwan
 constellation.del: Delphinus
 constellation.dor: Dorado
 constellation.dra: Drago
