--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -154,16 +154,16 @@ constellation.cha: Camaleón
 constellation.cir: Compás
 constellation.cma: Can Mayor
 constellation.cmi: Can Menor
-constellation.col: Columba
-constellation.com: Coma Berenice
-constellation.cnc: Cancer
-constellation.cra: Corona Austrina
-constellation.crb: Corona Borealis
-constellation.crt: Crater
-constellation.cru: Crux
-constellation.crv: Corvus
-constellation.cvn: Canes Venatici
-constellation.cyg: Cygnus
+constellation.col: Paloma
+constellation.com: Cabellera de Berenice
+constellation.cnc: Cangrejo
+constellation.cra: Corona Austral
+constellation.crb: Corona Boreal
+constellation.crt: Copa
+constellation.cru: Cruz del Sur
+constellation.crv: Cuervo
+constellation.cvn: Lebreles
+constellation.cyg: Cisne
 constellation.del: Delphinus
 constellation.dor: Dorado
 constellation.dra: Drago
