--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -160,7 +160,7 @@ constellation.cnc: Câncer
 constellation.cra:
 constellation.crb:
 constellation.crt:
-constellation.cru:
+constellation.cru: Cruzeiro do Sul
 constellation.crv:
 constellation.cvn: Canes Venatici
 constellation.cyg: Cygnus
