--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -67,23 +67,23 @@ magnitude.average: From 5 to 10
 magnitude.high: From 10 to 15
 magnitude.hard: 15 and more
 # Lang:
-fr: French
-en: English (UK)
-pt: Portuguese
-pt_BR: Portuguese (Brazil)
-es: Spanish
-de: German
+fr: Französisch
+en: Englisch (UK)
+pt: Portugiesisch
+pt_BR: Portugiesisch (Brazil)
+es: Spanisch
+de: Deutsch
 # Homepage
 homepage.message: Discover beauties and mysteries of the universe
 home.search.placeholder: Search in catalogs...
 dayImage: Image of the day
 # View full
 info: Informations
-desigs: Other designations
+desigs: Katalogbezeichnungen
 magnitude: Apparent magnitude
-constellation: Constellation|Constellations
-const_id: Constellation|Constellations
-constId: Constellation|Constellations
+constellation: Sternbild|Sternbilder
+const_id: Sternbild|Sternbilder
+constId: Sternbild|Sternbilder
 dim: Size
 dimExp: Angular dimensions in arcminutes
 distAl: Distance (year-light)
@@ -91,9 +91,9 @@ distPc: Distance (parsec)
 imagesGall: Images gallery
 constImgGall: In the same constellation
 typeImgGall: Objects of type "%type%"
-mag: Magnitude
-ra: Right ascension
-dec: Declination
+mag: Helligkeit
+ra: Rektaszension
+dec: Deklination
 discover: Discover
 discoverYear: Year
 galery: Gallery
@@ -111,15 +111,15 @@ range.sup: More than %from%
 filterBy: Filtering by
 nbResults: "%count% result found|%count% results found"
 # Type DSO
-type.gg: Galaxy cluster
+type.gg: Galaxienhaufen
 type.g:  Generic galaxy
-type.s:  Spiral galaxy
-type.s0: Lenticular galaxy
-type.sd: Dwarf galaxy
-type.e:  Elliptical galaxy
-type.i:  Irregular galaxy
-type.oc: Open cluster
-type.gc: Globular cluster
+type.s:  Spiralgalaxie
+type.s0: Linsenförmige Galaxie
+type.sd: Zwerggalaxie
+type.e:  Elliptische Galaxie
+type.i:  Irreguläre Galaxie
+type.oc: Offener Sternhaufen
+type.gc: Kugelsternhaufen
 type.en: Emission nebula
 type.bn: Generic bright nebula
 type.bpn: Bipolar nebula
@@ -127,10 +127,10 @@ type.sfr: Starforming Nebula (with open cluster)
 type.rn: Reflection nebula
 type.pn: Planetary nebula
 type.snr: Supernova remnant
-type.dn:  Dark nebula grey
+type.dn: Dark nebula grey
 type.pos: Asterism
 type.sc: Star clusters
-type.vn:  Reflexionsnebel
+type.vn: Reflexionsnebel
 # Constellations
 constellation.unassigned: Unassigned
 constellation.and: Andromeda
