--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -46,6 +46,7 @@ catalog.mkw: Minkowski catalog
 catalog.mzl: Menzel catalog
 catalog.biu: Biurakan catalog
 catalog.boc: Bochum catalog
+catalog.mel: Melotte catalog
 description.messier: Les objets de Messier sont une liste d'objets astronomiques catalogués par l'astronome français Charles Messier dans son Catalogue des Nébuleuses et des Amas d'Étoiles, publiée en 1771.
 description.ngc:
 description.ic:
